# azure-ml-model-builder

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  automl_driver.py  automl_driver_refactored.py  config.example.json  predicted_true  pyproject.toml  requirements.txt  residuals
docs/: QUICKSTART.md  TECHNICAL.md
explanation/2cbd3df5/: expected_values.interpret.json  local_importance_values_sparse.interpret.json  rich_metadata.interpret.json  visualization_dict.interpret.json  ys_pred_viz.interpret.json
explanation/2cbd3df5/global_names/: 0.interpret.json
explanation/2cbd3df5/global_rank/: 0.interpret.json
explanation/2cbd3df5/global_values/: 0.interpret.json
explanation/66c77c2a/: eval_data_viz.interpret.json  features.interpret.json  local_importance_values.interpret.json  rich_metadata.interpret.json  true_ys_viz.interpret.json  visualization_dict.interpret.json
explanation/66c77c2a/global_names/: 0.interpret.json
explanation/66c77c2a/global_rank/: 0.interpret.json
explanation/66c77c2a/global_values/: 0.interpret.json
outputs/: engineered_feature_names.json  featurization_summary.json  internal_cross_validated_models.pkl  pipeline_graph.json  run_id.txt
outputs/generated_code/: script.py  script_run_notebook.ipynb
outputs/mlflow-model/: MLmodel  model.pkl
scripts/: deploy_model.py  test_model.py  train_model.py
